other/block-pod-exec-by-namespace/.chainsaw-test/podcontrollers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
  namespace: pci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep", "300"]
      - name: bb2
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep", "300"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment02
  namespace: block-pod-exec-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep", "300"]
      - name: bb2
        image: ghcr.io/kyverno/test-busybox:1.35
        command: ["sleep", "300"]
