other/block-pod-exec-by-namespace/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: block-pod-exec-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: pci
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
