other/block-pod-exec-by-namespace/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-pod-exec-by-namespace
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../block-pod-exec-by-namespace.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: pods.yaml
    - apply:
        file: podcontrollers.yaml
  - name: step-03
    try:
    - sleep:
        duration: 10s
  - name: step-04
    try:
    - script:
        content: if kubectl exec -n pci pod02 -- ls; then exit 1;else exit 0; fi
    - script:
        content: if kubectl exec -n pci deploy/deployment01 -- ls; then exit 1;else
          exit 0; fi
    - script:
        content: kubectl exec -n block-pod-exec-ns pod01 -- ls
    - script:
        content: kubectl exec -n block-pod-exec-ns deploy/deployment02 -- ls
  - name: step-99
    try:
    - script:
        content: kubectl delete deployments --all --force --grace-period=0 -n pci
    - script:
        content: kubectl delete deployments --all --force --grace-period=0 -n block-pod-exec-ns
    - script:
        content: kubectl delete pods --all --force --grace-period=0 -n pci
    - script:
        content: kubectl delete pods --all --force --grace-period=0 -n block-pod-exec-ns
